--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,10 @@
 Update script to check for height
+Home page
+Header
+Contact page
+Student portfolio
+Submit resume online
+Design for cover sheet
+More images for Ornate
+	or different images from other projects
+Binder for cover sheet
